applications/alpine-9591134/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: alpine-9591134
  namespace: alpine

spec:
  selector:
    app: alpine-9591134

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
