applications/alpine-9591134/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: alpine-9591134
  namespace: alpine

spec:
  ingressClassName: traefik

  rules:
  - host: alpine-9591134.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: alpine-9591134

            port:
              number: 80
